fixed state for toggling dark mode

--- a/frontend/components/profile_page/profile_page.css
+++ b/frontend/components/profile_page/profile_page.css
@@ -304,6 +304,7 @@
   bottom: 0;
   border-radius: 34%;
   background-color: #ccc;
+  transition: 0.4s;
 }
 
 .slider::before {
@@ -316,4 +317,12 @@
   background-color: white;
   transition: 0.4s;
   border-radius: 43%;
+}
+
+input:checked + .slider {
+  background-color: #18bf63;
+}
+
+input:checked + .slider:before {
+  transform: translateX(27px);
 }
